/*
 * This file was generated by the Gradle 'init' task.
 *
 * This is a general purpose Gradle build.
 * Learn more about Gradle by exploring our samples at https://docs.gradle.org/7.4.2/samples
 * This project uses @Incubating APIs which are subject to change.
 */
plugins {
    id 'application'
    id 'checkstyle'
    id 'com.adarshr.test-logger' version '3.2.0'
    id 'se.patrikerdes.use-latest-versions' version '0.2.18'
    id 'com.github.ben-manes.versions' version '0.42.0'
    id 'io.freefair.lombok' version '6.4.2'
    id 'jacoco'
    /*id 'net.ltgt.errorprone' version '2.0.2'*/
}

group = 'hexlet.code'
version = '1.0.3-SNAPSHOT'

repositories {
    mavenCentral()
//    maven {
//        url 'https://repo.clojars.org'
//        name 'Clojars'
//    }
}

compileJava {
    options.release = 17
//    options.compilerArgs += ["-Aproject=${project.group}/${project.name}"]
}

application {
    mainClass = 'hexlet.code.App'
}

//run {
//    standardInput = System.in
//}

dependencies {
    implementation 'org.apache.commons:commons-lang3:3.12.0'

    implementation 'com.github.lbovolini:ObjectMapper:0.2.3'

    annotationProcessor 'org.apache.commons:commons-lang3:3.12.0'

    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'

    testImplementation(
            'org.junit.jupiter:junit-jupiter-params:5.9.0',
            'org.slf4j:slf4j-log4j12:2.0.3',
            'org.assertj:assertj-core:3.23.1'
    )
    implementation 'info.picocli:picocli:4.6.3'
    annotationProcessor 'info.picocli:picocli-codegen:4.6.3'

    implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.0-rc1'
    implementation 'io.vertx:vertx-core:4.3.4'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.14.0-rc1'

    /* errorprone 'com.google.errorprone:error_prone_core:2.13.0'*/
}

test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
//        csv.required = false
//        html.destination file('target/jacocoHtml')
    }
}

testlogger {
    showStandardStreams true
}

jacoco {
    toolVersion = '0.8.8'
}

checkstyle {
    toolVersion '9.2.1'
}
